deploy/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tenant-controller
  name: tenant-controller
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: tenant-controller
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ingress-ca
  name: tenant-controller
spec:
  ingressClassName: nginx
  rules:
  - host: tenant-controller.azure.lab.flanksource.com
    http:
      paths:
      - backend:
          service:
            name: tenant-controller
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tenant-controller.azure.lab.flanksource.com
    secretName: tenant-controller-tls
